--- a/assets/stylesheets/carousel.css
+++ b/assets/stylesheets/carousel.css
@@ -137,3 +137,5 @@ body {
 /*# sourceMappingURL=maps/carousel.css.map */
 
 /*# sourceMappingURL=maps/carousel.css.map */
+
+/*# sourceMappingURL=maps/carousel.css.map */
